Kube/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gate-ingress
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /client
            pathType: Prefix
            backend:
              service:
                name: client-test
                port:
                  number: 8081
